--- a/index.html
+++ b/index.html
@@ -2,28 +2,215 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Learning How to Learn">
+  <meta name="keywords" content="education, learning">
+  <meta name="author" content="Practicum by Yandex">
+
   <title>Learning how to learn</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img src="./images/logo_place_header.png" alt="logo" class="logo header__logo">
+      <h1 class="header__title">Learning how <br>to learn</h1>
+      <p class="header__subtitle">The most effective, cutting-edge learning<br>techniques that you can apply to your daily life. <br>
+      <a href ="#" class="header__subtitle-link">Learn more &rarr;</a></p>
+      <div class="header__square-pic"></div>
+      <img src="./images/header-image.png" alt="header image of a woman standing on a rock" class="header__image">
     </header>
+
     <main class="content">
+
       <section class="description">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">The main problem with education
+          </h3>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph two-columns__paragraph_space_bottom">Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. All you actually do is memorize information in order to regurgitate when you take the test. You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around, do you truly undrstand the subject material? All you've really learned is how to pass that one test. Once that test is over, the information in your head has outlived its usefulness.</p>
+              <p class="two-columns__paragraph two-columns__paragraph_space_bottom"><span class="two-columns__span-accent">Conclusion:</span> Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked. So, what can we do to remedy this?</p>
+              <p class="two-columns__paragraph">There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging. This is exactly what we do at Practicum.</p>
+            </div>
+        </div>
       </section>
+
+      <!-- <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief"><h2 class="two-columns__title">The main problem with education</h2>
+          </div>
+            <div class="two-columns__main-text">
+              <div class="two-columns__paragraph two-columns__paragraph_space_bottom">Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. All you actually do is memorize information in order to regurgitate when you take the test. You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around, do you truly undrstand the subject material? All you've really learned is how to pass that one test. Once that test is over, the information in your head has outlived its usefulness.</div>
+              <div class="two-columns__paragraph two-columns__paragraph_span two-columns__paragraph_space_bottom"><p><span class="two-columns__span-accent">Conclusion:</span> Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked. So, what can we do to remedy this?</p></div>
+              <div class="two-columns__paragraph"><p>There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging. This is exactly what we do at Practicum.</p></div>
+            </div>
+        </div>
+      </section> -->
+
+
 
       <section class="digits">
+        <div class="section-title">Facts and figures</div>
+        <div class="section-subtitle">On learning and the brain</div>
+        <div class="table">
+          <ul class="table__cell">
+            <li class="table__cards">
+              <h3 class="table__heading">86 billion</h3>
+              <p class="table__text">The number of neurons in the human brain</p>
+            </li>
+            <li class="table__cards">
+              <h3 class="table__heading">2.1 billion</h3>
+              <p class="table__text">The number of adults with low reading proficiency</p>
+              <p class="table__text">World Bank, 2017</p>
+            </li>
+            <li class="table__cards">
+              <h3 class="table__heading">1,000 terabytes</h3>
+              <p class="table__text">Human information storage capacity</p>
+            </li>
+            <li class="table__cards">
+              <h3 class="table__heading">500 trillion</h3>
+              <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
+            </li>
+            <li class="table__cards">
+              <h3 class="table__heading">420 million</h3>
+              <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
+              <p class="table__text">World Bank, 2017</p>
+            </li>
+            <li class="table__cards">
+              <h3 class="table__heading">17 - 20 years old</h3>
+              <p class="table__text">Peak learning age</p>
+            </li>
+            <li class="table__cards">
+              <h3 class="table__heading">1885</h3>
+              <p class="table__text">Development of the forgetting curve</p>
+            </li>
+            <li class="table__cards">
+              <h3 class="table__heading">1897</h3>
+              <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="feynman">
+      <section class="feynman" >
+        <h4 class="feynman__title">The Feynman Technique</h4>
+        <p class="feynman__subtitle">Learn without forgetting.</p>
+        <a href="" class="feynman__link">More &rarr;</a>
+        <div class="feynman__image" alt="a man lookin to the side"></div>
+
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
+        <p class="section-subtitle_theme_dark">by Josh Kaufman</p>
+
+          <ul class="table_theme_dark">
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">1</h3>
+              <p class="table__text_theme_dark">Choose a lovable project.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">2</h3>
+              <p class="table__text_theme_dark">Focus your energy on one skill at a time.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">3</h3>
+              <p class="table__text_theme_dark">Define your target performance level.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">4</h3>
+              <p class="table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">5</h3>
+              <p class="table__text_theme_dark">Obtain critical tools.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">6</h3>
+              <p class="table__text_theme_dark">Eliminate barriers to practice.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">7</h3>
+              <p class="table__text_theme_dark">Make dedicated time for practice.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">8</h3>
+              <p class="table__text_theme_dark">Create fast feedback loops.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">9</h3>
+              <p class="table__text_theme_dark">Practice by the clock in short bursts.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">10</h3>
+              <p class="table__text_theme_dark">Emphasize quantity and speed.</p>
+            </li>
+          </ul>
+
+
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle">
       </section>
+
+
+      <!-- <section class="kaufman">
+        <div class="section-title_theme_dark">Ten principles of rapid skill acquisition</div>
+        <div class="section-subtitle_theme_dark">by Josh Kaufman</div>
+        <div class="table__theme_dark">
+          <ul class="table__cell_theme_dark">
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">1</h3>
+              <p class="table__text_theme_dark">Choose a lovable project.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">2</h3>
+              <p class="table__text_theme_dark">Focus your energy on one skill at a time.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">3</h3>
+              <p class="table__text_theme_dark">Define your target performance level.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">4</h3>
+              <p class="table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">5</h3>
+              <p class="table__text_theme_dark">Obtain critical tools.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">6</h3>
+              <p class="table__text_theme_dark">Eliminate barriers to practice.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">7</h3>
+              <p class="table__text_theme_dark">Make dedicated time for practice.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">8</h3>
+              <p class="table__text_theme_dark">Create fast feedback loops.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">9</h3>
+              <p class="table__text_theme_dark">Practice by the clock in short bursts.</p>
+            </li>
+            <li class="table__cards_theme_dark">
+              <h3 class="table__heading_theme_dark">10</h3>
+              <p class="table__text_theme_dark">Emphasize quantity and speed.</p>
+            </li>
+          </ul>
+        </div>
+
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle">
+      </section>
+ -->
+
     </main>
+
+
     <footer class="footer">
+
+
 
     </footer>
   </div>
