Fixed BEM and other comments from Code Review 1

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.png" alt="logo" class="logo header__logo">
-      <h1 class="header__title">Learning how <br>to learn</h1>
-      <p class="header__subtitle">The most effective, cutting-edge learning<br>techniques that you can apply to your daily life. <br>
+      <img src="./images/logo_place_header.png" alt="Yandex logo" class="logo logo_place_header">
+      <h1 class="header__title">Learning how to learn</h1>
+      <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
       <a href ="#" class="header__subtitle-link">Learn more &rarr;</a></p>
       <div class="header__square-pic"></div>
       <img src="./images/header-image.png" alt="header image of a woman standing on a rock" class="header__image">
@@ -26,11 +26,10 @@
 
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief">The main problem with education
-          </h2>
+          <h2 class="two-columns__brief">The main problem with education</h2>
             <div class="two-columns__main-text">
-              <p class="two-columns__paragraph two-columns__paragraph_space_bottom">Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. All you actually do is memorize information in order to regurgitate when you take the test. You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around, do you truly undrstand the subject material? All you've really learned is how to pass that one test. Once that test is over, the information in your head has outlived its usefulness.</p>
-              <p class="two-columns__paragraph two-columns__paragraph_space_bottom"><span class="two-columns__span-accent">Conclusion:</span> Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked. So, what can we do to remedy this?</p>
+              <p class="two-columns__paragraph">Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. All you actually do is memorize information in order to regurgitate when you take the test. You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around, do you truly undrstand the subject material? All you've really learned is how to pass that one test. Once that test is over, the information in your head has outlived its usefulness.</p>
+              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Conclusion:</span> Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked. So, what can we do to remedy this?</p>
               <p class="two-columns__paragraph">There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging. This is exactly what we do at Practicum.</p>
             </div>
         </div>
@@ -79,86 +78,85 @@
       </section>
 
       <section class="feynman" >
-        <h4 class="feynman__title">The Feynman Technique</h4>
+        <h1 class="feynman__title">The Feynman Technique</h1>
         <p class="feynman__subtitle">Learn without forgetting.</p>
         <a href="#" class="feynman__link">More &rarr;</a>
-        <img src="images/feynman.png" class="feynman__image" alt="a man lookin to the side">
+
       </section>
 
       <section class="kaufman">
-        <h5 class="section-title_theme_dark">Ten principles of rapid skill acquisition</h5>
-        <p class="section-subtitle_theme_dark">by Josh Kaufman</p>
+        <h1 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h1>
+        <p class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</p>
 
-          <ul class="table_theme_dark">
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">1</h3>
-              <p class="table__text_theme_dark">Choose a lovable project.</p>
+          <ul class="table table_theme_dark">
+            <li class="table__cell table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">1</h3>
+              <p class="table__text table_text_theme_dark">Choose a lovable project.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">2</h3>
-              <p class="table__text_theme_dark">Focus your energy on one skill at a time.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">2</h3>
+              <p class="table__text table_text_theme_dark">Focus your energy on one skill at a time.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">3</h3>
-              <p class="table__text_theme_dark">Define your target performance level.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">3</h3>
+              <p class="table__text table_text_theme_dark">Define your target performance level.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">4</h3>
-              <p class="table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">4</h3>
+              <p class="table__text table_text_theme_dark">Deconstruct the skill into sub-skills.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">5</h3>
-              <p class="table__text_theme_dark">Obtain critical tools.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">5</h3>
+              <p class="table__text table_text_theme_dark">Obtain critical tools.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">6</h3>
-              <p class="table__text_theme_dark">Eliminate barriers to practice.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">6</h3>
+              <p class="table__text table_text_theme_dark">Eliminate barriers to practice.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">7</h3>
-              <p class="table__text_theme_dark">Make dedicated time for practice.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">7</h3>
+              <p class="table__text table_text_theme_dark">Make dedicated time for practice.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">8</h3>
-              <p class="table__text_theme_dark">Create fast feedback loops.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">8</h3>
+              <p class="table__text table_text_theme_dark">Create fast feedback loops.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">9</h3>
-              <p class="table__text_theme_dark">Practice by the clock in short bursts.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">9</h3>
+              <p class="table__text table_text_theme_dark">Practice by the clock in short bursts.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">10</h3>
-              <p class="table__text_theme_dark">Emphasize quantity and speed.</p>
+            <li class="table table_cell_theme_dark">
+              <h3 class="table__heading table_heading_theme_dark">10</h3>
+              <p class="table__text table_text_theme_dark">Emphasize quantity and speed.</p>
             </li>
           </ul>
-        <img src="./images/kaufman-triangle.svg" alt="blue triangle" class="kaufman__triangle">
       </section>
     </main>
 
 
     <footer class="footer">
       <div class="footer__columns">
-
-        <div class="footer__column_content_copyright">
-          <img src="./images/logo_place_footer.png" alt="Yandex Logo" class="logo_place_footer">
+        <div class="footer__column footer__column_content_copyright">
+          <img src="./images/logo_place_footer.png" alt="Yandex Logo" class="logo logo_place_footer">
 
           <p class="footer__author">&#169; 2020 Rachelle Cottle</p>
         </div>
 
-        <div class="footer__column_content_info">
-          <h5 class="footer__column_heading">About Practicum by Yandex </h5>
-          <ul class="footer__column_list"><li><a href="#" class="footer__column_links">Home page</a></li>
-          <li><a href="#" class="footer__column_links">Concept</a></li>
-          <li><a href="#" class="footer__column_links">Mentors</a></li>
+        <div class="footer__column footer__column_content_info">
+          <h5 class="column-heading">About Practicum by Yandex </h5>
+          <ul class="column-list">
+            <li><a href="#" class="column-links">Home page</a></li>
+          <li><a href="#" class="column-links">Concept</a></li>
+          <li><a href="#" class="column-links">Mentors</a></li>
         </ul>
         </div>
 
-        <div class="footer_column_content_social">
-          <h5 class="footer__column_heading">Social Media </h5>
-          <ul class="footer__column_list">
-            <li><img src="./images/facebook_color_white.svg" class="footer__social_icon" alt="Facebook"><a href="#" class="footer__column_links">Facebook</a>
+        <div class="footer__column footer__column_content_social">
+          <h5 class="column-heading">Social Media </h5>
+          <ul class="column-list">
+            <li><a href="#" class="column-links"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="Facebook">Facebook</a>
             </li>
-            <li><img src="./images/instagram_color_white.svg" class="footer__social_icon" alt="Instagram"><a href="#" class="footer__column_links">Instagram</a>
+            <li><a href="#" class="column-links"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="Instagram">Instagram</a>
              </li>
            </ul>
         </div>
