--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Learning How to Learn">
   <meta name="keywords" content="education, learning">
@@ -17,8 +17,8 @@
       <img src="./images/logo_place_header.png" alt="Yandex logo" class="logo logo_place_header">
       <h1 class="header__title">Learning how to learn</h1>
       <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
-      <a href ="#" class="header__subtitle-link">Learn more &rarr;</a></p>
-      <div class="header__square-pic"></div>
+      <a href ="#" class="header__subtitle-link link_with_transparency">Learn more &rarr;</a></p>
+      <div class="header__square-pic rotation"></div>
       <img src="./images/header-image.png" alt="header image of a woman standing on a rock" class="header__image">
     </header>
 
@@ -33,6 +33,80 @@
               <p class="two-columns__paragraph">There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging. This is exactly what we do at Practicum.</p>
             </div>
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Learning Techniques</h2>
+        <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
+        <div>
+          <ul class="cards">
+            <li class="cards__item">
+              <img src="./images/cards-attention.png" alt="Book cover: 101 essays that will change the way you think" class="cards__image">
+              <h4 class="cards__title">Two Ways of Thinking</h4>
+              <p class="cards__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
+            </li>
+
+            <li class="cards__item">
+              <img src="./images/cards-recall.png" alt="Statue thinking" class="cards__image">
+              <h4 class="cards__title">Recall</h4>
+              <p class="cards__description">Improving your ability to remember key bits of information helps to connect different parts of the brain.</p>
+            </li>
+
+            <li class="cards__item">
+              <img src="./images/cards-interliving.png" alt="People inside of a building" class="cards__image">
+              <h4 class="cards__title">Interleaving</h4>
+              <p class="cards__description">When you learn multiple skills at the same time, they reinforce each other.</p>
+            </li>
+
+            <li class="cards__item">
+              <img src="./images/cards-question.png" alt="A lone person inside of a building" class="cards__image">
+              <h4 class="cards__title">Questions</h4>
+              <p class="cards__description">When listening to your teacher, think up a good question, something that you're really itching to know.</p>
+            </li>
+
+            <li class="cards__item">
+              <img src="./images/cards-competence.png" alt="Stack of books" class="cards__image">
+              <h4 class="cards__title">Illusion of Competence</h4>
+              <p class="cards__description">Test yourself, write it down, tell other people, and repeat the process in different settings. Only then can you be truly certain you've understood something.</p>
+            </li>
+            </ul>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">TED talks</h2>
+        <p class="section-subtitle">For lovers of procrastination</p>
+        <ul class="video__iframes">
+          <li>
+            <iframe  src="https://www.youtube.com/embed/5MgBikgcWnY"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__iframe"></iframe>
+          </li>
+          <li class="video__iframe_place_bottom">
+            <iframe src="https://www.youtube.com/embed/arj7oStGLkU"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__iframe"></iframe>
+          </li>
+        </ul>
+      </section>
+
+     <section class="oakley">
+        <div class="two-columns two-columns_top_bottom_margins">
+          <h4 class="two-columns__brief">Barbara Oakley’s story.</h4>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">Math didn't come naturally to Barbara in childhood. She thought of herself as more of a
+                humanities person, and not a brilliant one at that. With an eye to becoming a linguist, after
+                school she enlisted in the army, who sent her to learn Russian. After several years of service,
+                during which she rose to the rank of Captain, Barbara left the army and decided to study
+                engineering. In was during this time that she developed her learning methodology as she was
+                forced to reprogram her brain for a different kind of learning. It turns out that when something
+                doesn't come naturally to you, having to work hard to gain the knowledge that other people
+                may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.</p>
+            </div>
+        </div>
+      </section>
+
+      <section class="feynman" >
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <p class="feynman__subtitle">Learn without forgetting.</p>
+        <a href="#" class="feynman__link link_with_transparency">More &rarr;</a>
+
       </section>
 
       <section class="digits">
@@ -77,11 +151,21 @@
           </ul>
       </section>
 
-      <section class="feynman" >
-        <h2 class="feynman__title">The Feynman Technique</h2>
-        <p class="feynman__subtitle">Learn without forgetting.</p>
-        <a href="#" class="feynman__link">More &rarr;</a>
-
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Salman Khan</p>
+          <h2 class="khan__title">The One World Schoolhouse</h2>
+          <p class="khan__quote">Sal Khan's passion and innovation is transforming learning for millions of
+            students worldwide. The One World Schoolhouse is a must-read for all
+            who are committed to improving education so students everywhere can
+            gain the skills and knowledge to be successful in school, careers and life.</p>
+          <p class="khan__quote-author">George Lucas</p>
+          <p class="khan__quote-author-subline">Filmmaker</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.png" class="khan__book-pic" alt="Picture of a book with the title The One World School House Education Reimagined by Salman Khan">
+            <a href="#" class="link_with_transparency khan__buy-link">Buy book &rarr;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -130,42 +214,48 @@
               <p class="table__text table__text_theme_dark">Emphasize quantity and speed.</p>
             </li>
           </ul>
+          <img src="./images/kaufman-triangle.svg" alt="blue triangle" class="kaufman__triangle rotation">
       </section>
-
     </main>
 
+    <section class="resources">
+      <h2 class="section-title">Useful Resources</h2>
+      <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
+      <ul class="resources__logo-zone">
+        <li><img src="./images/logo/resources-tedED.png" alt="TedEd logo" class="resources__logo"></li>
+        <li><img src="./images/logo/resources-Medium.png" alt="Medium logo" class="resources__logo"></li>
+        <li><img src="./images/logo/resources-dezeen.png" alt="deZeen logo" class="resources__logo"></li>
+        <li><img src="./images/logo/resources-goodreads.png" alt="good reads logo" class="resources__logo"></li>
+      </ul>
+    </section>
 
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.png" alt="Yandex Logo" class="logo logo_place_footer">
 
-          <p class="footer__author">&#169; 2020 Rachelle Cottle</p>
+          <p class="footer__author">© 2020 Rachelle Cottle</p>
         </div>
 
         <div class="footer__column footer__column_content_info">
           <h5 class="column-heading">About Practicum by Yandex </h5>
           <ul class="column-list">
-            <li><a href="#" class="column-links">Home page</a></li>
-          <li><a href="#" class="column-links">Concept</a></li>
-          <li><a href="#" class="column-links">Mentors</a></li>
+            <li><a href="#" class="column-links link_with_transparency">Home page</a></li>
+          <li><a href="#" class="column-links link_with_transparency">Concept</a></li>
+          <li><a href="#" class="column-links link_with_transparency">Mentors</a></li>
         </ul>
         </div>
-
         <div class="footer__column footer__column_content_social">
           <h5 class="column-heading">Social Media </h5>
           <ul class="column-list">
-            <li><a href="#" class="column-links"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="Facebook">Facebook</a>
+            <li><a href="#" class="column-links link_with_transparency"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="Facebook">Facebook</a>
             </li>
-            <li><a href="#" class="column-links"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="Instagram">Instagram</a>
+            <li><a href="#" class="column-links link_with_transparency"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="Instagram">Instagram</a>
              </li>
            </ul>
         </div>
-
-
       </div>
     </footer>
-
   </div>
 </body>
 </html>
