Made changes from code review 1

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Learning How to Learn">
   <meta name="keywords" content="education, learning">
@@ -17,7 +16,7 @@
       <img src="./images/logo_place_header.png" alt="Yandex logo" class="logo logo_place_header">
       <h1 class="header__title">Learning how to learn</h1>
       <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
-      <a href ="#" class="header__subtitle-link link_with_transparency">Learn more &rarr;</a></p>
+      <a href ="#" class="header__subtitle-link">Learn more &rarr;</a></p>
       <div class="header__square-pic rotation"></div>
       <img src="./images/header-image.png" alt="header image of a woman standing on a rock" class="header__image">
     </header>
@@ -26,7 +25,7 @@
 
       <section class="description">
         <div class="two-columns">
-          <h4 class="two-columns__brief">The main problem with education</h4>
+          <h2 class="two-columns__brief">The main problem with education</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. All you actually do is memorize information in order to regurgitate when you take the test. You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around, do you truly undrstand the subject material? All you've really learned is how to pass that one test. Once that test is over, the information in your head has outlived its usefulness.</p>
               <p class="two-columns__paragraph"><span class="two-columns__span-accent">Conclusion:</span> Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked. So, what can we do to remedy this?</p>
@@ -80,15 +79,15 @@
           <li>
             <iframe  src="https://www.youtube.com/embed/5MgBikgcWnY"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__iframe"></iframe>
           </li>
-          <li class="video__iframe_place_bottom">
+          <li>
             <iframe src="https://www.youtube.com/embed/arj7oStGLkU"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__iframe"></iframe>
           </li>
         </ul>
       </section>
 
      <section class="oakley">
-        <div class="two-columns two-columns_top_bottom_margins">
-          <h4 class="two-columns__brief">Barbara Oakley’s story.</h4>
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Barbara Oakley’s story.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">Math didn't come naturally to Barbara in childhood. She thought of herself as more of a
                 humanities person, and not a brilliant one at that. With an eye to becoming a linguist, after
@@ -105,7 +104,7 @@
       <section class="feynman" >
         <h2 class="feynman__title">The Feynman Technique</h2>
         <p class="feynman__subtitle">Learn without forgetting.</p>
-        <a href="#" class="feynman__link link_with_transparency">More &rarr;</a>
+        <a href="#" class="feynman__link">More &rarr;</a>
 
       </section>
 
@@ -153,18 +152,17 @@
 
       <section class="khan">
         <div class="khan__container">
-          <p class="khan__author">Salman Khan</p>
+          <h3 class="khan__author">Salman Khan</h3>
           <h2 class="khan__title">The One World Schoolhouse</h2>
-          <p class="khan__quote">Sal Khan's passion and innovation is transforming learning for millions of
+          <blockquote class="khan__quote">Sal Khan's passion and innovation is transforming learning for millions of
             students worldwide. The One World Schoolhouse is a must-read for all
             who are committed to improving education so students everywhere can
-            gain the skills and knowledge to be successful in school, careers and life.</p>
+            gain the skills and knowledge to be successful in school, careers and life.</blockquote>
           <p class="khan__quote-author">George Lucas</p>
           <p class="khan__quote-author-subline">Filmmaker</p>
           <div class="khan__book-container">
-            <img src="./images/khan-book.png" class="khan__book-pic" alt="Picture of a book with the title The One World School House Education Reimagined by Salman Khan">
-            <a href="#" class="link_with_transparency khan__buy-link">Buy book &rarr;</a>
-          </div>
+         <img src="./images/khan-book.png" class="khan__book-pic" alt="Picture of a book with the title The One World School House Education Reimagined by Salman Khan">
+            <a href="#" class="khan__buy-link">Buy book &rarr;</a>
         </div>
       </section>
 
@@ -240,17 +238,17 @@
         <div class="footer__column footer__column_content_info">
           <h5 class="column-heading">About Practicum by Yandex </h5>
           <ul class="column-list">
-            <li><a href="#" class="column-links link_with_transparency">Home page</a></li>
-          <li><a href="#" class="column-links link_with_transparency">Concept</a></li>
-          <li><a href="#" class="column-links link_with_transparency">Mentors</a></li>
+            <li><a href="#" class="column-links">Home page</a></li>
+          <li><a href="#" class="column-links">Concept</a></li>
+          <li><a href="#" class="column-links">Mentors</a></li>
         </ul>
         </div>
         <div class="footer__column footer__column_content_social">
           <h5 class="column-heading">Social Media </h5>
           <ul class="column-list">
-            <li><a href="#" class="column-links link_with_transparency"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="Facebook">Facebook</a>
+            <li><a href="#" class="column-links"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt="Facebook">Facebook</a>
             </li>
-            <li><a href="#" class="column-links link_with_transparency"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="Instagram">Instagram</a>
+            <li><a href="#" class="column-links"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt="Instagram">Instagram</a>
              </li>
            </ul>
         </div>
