Submitting for review

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
           <div class="khan__book-container">
          <img src="./images/khan-book.png" class="khan__book-pic" alt="Picture of a book with the title The One World School House Education Reimagined by Salman Khan">
             <a href="#" class="khan__buy-link">Buy book &rarr;</a>
+          </div>
         </div>
       </section>
 
